Fix a problem where index page links were being squished
@jonpaul should check this out.

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -208,9 +208,3 @@ ul.posts {
 
 .strike { text-decoration: line-through; }
 
-.inner { position: relative; }
-.indexed li > a { 
-  position: absolute;
-  left: 0;
-  padding-left: 65px;
-}
